zellij-utils/src/snapshots/zellij_utils__setup__setup_test__default_config_with_no_cli_arguments-3.snap
---
source: zellij-utils/src/setup.rs
expression: "format!(\"{:#?}\", options)"
---
Options {
    simplified_ui: None,
    theme: None,
    default_mode: None,
    default_shell: None,
    default_cwd: None,
    default_layout: None,
    layout_dir: None,
    theme_dir: None,
    mouse_mode: None,
    pane_frames: None,
    mirror_session: None,
    on_force_close: None,
    scroll_buffer_size: None,
    scroll_speed: None,
    copy_command: None,
    copy_clipboard: None,
    copy_on_select: None,
    scrollback_editor: None,
    session_name: None,
    attach_to_session: None,
    auto_layout: None,
    session_serialization: None,
    serialize_pane_viewport: None,
    scrollback_lines_to_serialize: None,
    styled_underlines: None,
    serialization_interval: None,
    disable_session_metadata: None,
    support_kitty_keyboard_protocol: None,
    web_server: None,
    web_sharing: None,
    stacked_resize: None,
    show_startup_tips: None,
    show_release_notes: None,
    advanced_mouse_actions: None,
    web_server_ip: None,
    web_server_port: None,
    web_server_cert: None,
    web_server_key: None,
    enforce_https_for_localhost: None,
    post_command_discovery_hook: None,
}
